cambio de diseño y codigo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="h1-container">
-            <h1>Weather App</h1>
+            <h1>Weatherapi  <img src="/images/logo.gif" alt=""></h1>
         </div>
     </header>
 
